[gd_scene load_steps=14 format=3 uid="uid://cvfhcvoi3ofw5"]

[ext_resource type="Script" path="res://GridContainer.gd" id="1_uvtbs"]
[ext_resource type="Texture2D" uid="uid://x6q4xoyxoyp0" path="res://Assets/PH_GRASS.png" id="2_jr80f"]
[ext_resource type="Script" path="res://ItemTexture.gd" id="3_xcnnl"]
[ext_resource type="Texture2D" uid="uid://cm6i0apr7irag" path="res://Assets/PH_FOREST.png" id="4_ay134"]
[ext_resource type="Texture2D" uid="uid://dwn35dw3186va" path="res://Assets/PH_HILL.png" id="5_vinjf"]
[ext_resource type="Texture2D" uid="uid://b0nobuhucymy5" path="res://Assets/PH_TOWN.png" id="6_nj0gd"]
[ext_resource type="Texture2D" uid="uid://djtb00ur8lgfx" path="res://Assets/PH_FACTORY.png" id="7_7j2pa"]
[ext_resource type="Texture2D" uid="uid://ces6l2xjx5yia" path="res://Assets/PH_WATER.png" id="8_r3den"]
[ext_resource type="Texture2D" uid="uid://yr6prkef2bpr" path="res://Assets/PH_STREET.png" id="9_u67xa"]
[ext_resource type="Script" path="res://TileInfoLabel.gd" id="10_wke5m"]
[ext_resource type="Script" path="res://Save.gd" id="11_ds4ev"]
[ext_resource type="Script" path="res://NotificationDialog.gd" id="12_q4l7o"]
[ext_resource type="Script" path="res://Load.gd" id="13_xuaib"]

[node name="EditorMenu" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_top = 4.0
offset_right = -6.0
offset_bottom = 90.0
grow_horizontal = 0

[node name="GridContainer" type="GridContainer" parent="Panel"]
offset_left = 3.0
offset_top = 2.0
offset_right = 59.0
offset_bottom = 81.0
columns = 3
script = ExtResource("1_uvtbs")

[node name="ItemTexture" type="TextureRect" parent="Panel/GridContainer"]
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2_jr80f")
script = ExtResource("3_xcnnl")

[node name="ItemTexture2" type="TextureRect" parent="Panel/GridContainer"]
offset_left = 20.0
offset_right = 36.0
offset_bottom = 16.0
texture = ExtResource("4_ay134")
script = ExtResource("3_xcnnl")
tile_atlas_coordinates = Vector2i(1, 0)

[node name="ItemTexture3" type="TextureRect" parent="Panel/GridContainer"]
offset_left = 40.0
offset_right = 56.0
offset_bottom = 16.0
texture = ExtResource("5_vinjf")
script = ExtResource("3_xcnnl")
tile_atlas_coordinates = Vector2i(2, 0)

[node name="ItemTexture5" type="TextureRect" parent="Panel/GridContainer"]
offset_top = 20.0
offset_right = 16.0
offset_bottom = 36.0
texture = ExtResource("6_nj0gd")
script = ExtResource("3_xcnnl")
tile_atlas_coordinates = Vector2i(3, 0)

[node name="ItemTexture6" type="TextureRect" parent="Panel/GridContainer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 36.0
offset_bottom = 36.0
texture = ExtResource("7_7j2pa")
script = ExtResource("3_xcnnl")
tile_atlas_coordinates = Vector2i(4, 0)

[node name="ItemTexture7" type="TextureRect" parent="Panel/GridContainer"]
offset_left = 40.0
offset_top = 20.0
offset_right = 56.0
offset_bottom = 36.0
texture = ExtResource("8_r3den")
script = ExtResource("3_xcnnl")
tile_atlas_coordinates = Vector2i(5, 0)

[node name="ItemTexture4" type="TextureRect" parent="Panel/GridContainer"]
offset_top = 40.0
offset_right = 16.0
offset_bottom = 56.0
texture = ExtResource("9_u67xa")
script = ExtResource("3_xcnnl")
tile_atlas_coordinates = Vector2i(6, 0)

[node name="InfoPanel" type="Panel" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -25.0
offset_right = -7.0
offset_bottom = 39.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -30.0
offset_right = 29.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel/MarginContainer"]
offset_right = 59.0
offset_bottom = 61.0

[node name="TileInfoLabel" type="RichTextLabel" parent="InfoPanel/MarginContainer/VBoxContainer"]
offset_right = 59.0
theme_override_font_sizes/normal_font_size = 6
fit_content_height = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("10_wke5m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 333.0
offset_top = 180.0
offset_right = 392.0
offset_bottom = 224.0

[node name="Save" type="Button" parent="VBoxContainer"]
offset_right = 59.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Save"
script = ExtResource("11_ds4ev")

[node name="SaveDialog" type="Panel" parent="VBoxContainer/Save"]
visible = false
offset_left = -197.0
offset_top = -86.0
offset_right = -69.0
offset_bottom = -16.0

[node name="Label" type="Label" parent="VBoxContainer/Save/SaveDialog"]
offset_left = 23.0
offset_top = 3.0
offset_right = 94.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 8
text = "Enter a map name"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Save/SaveDialog"]
offset_left = 5.0
offset_top = 22.0
offset_right = 123.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 8
placeholder_text = "ExampleMap"
context_menu_enabled = false
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Save/SaveDialog"]
offset_left = 6.0
offset_top = 47.0
offset_right = 123.0
offset_bottom = 68.0

[node name="Confirm" type="Button" parent="VBoxContainer/Save/SaveDialog/HBoxContainer"]
custom_minimum_size = Vector2(58, 0)
offset_right = 58.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 8
text = "Confirm
"

[node name="Cancel" type="Button" parent="VBoxContainer/Save/SaveDialog/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(54, 0)
offset_left = 62.0
offset_right = 116.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 8
text = "Cancel"

[node name="NotificationDialog" type="Panel" parent="VBoxContainer/Save"]
visible = false
offset_left = -197.0
offset_top = -86.0
offset_right = -69.0
offset_bottom = 17.0
script = ExtResource("12_q4l7o")

[node name="OK" type="Button" parent="VBoxContainer/Save/NotificationDialog"]
offset_left = 2.0
offset_top = 76.0
offset_right = 126.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 11
text = "OK"

[node name="Label" type="Label" parent="VBoxContainer/Save/NotificationDialog"]
offset_right = 129.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 11
text = "Saved the Map
under the name:
"
horizontal_alignment = 1

[node name="Load" type="Button" parent="VBoxContainer"]
offset_top = 24.0
offset_right = 59.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 8
text = "Load"
script = ExtResource("13_xuaib")

[node name="LoadDialog" type="Panel" parent="VBoxContainer/Load"]
visible = false
offset_left = -262.0
offset_top = -181.0
offset_right = -33.0
offset_bottom = -25.0

[node name="Label" type="Label" parent="VBoxContainer/Load/LoadDialog"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 11
text = "Select a Map"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Load/LoadDialog"]
offset_left = 11.0
offset_top = 27.0
offset_right = 219.0
offset_bottom = 152.0

[node name="ItemList" type="ItemList" parent="VBoxContainer/Load/LoadDialog/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
offset_right = 208.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 11

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Load/LoadDialog/VBoxContainer"]
offset_left = 32.0
offset_top = 104.0
offset_right = 176.0
offset_bottom = 124.0
size_flags_horizontal = 4

[node name="Confirm" type="Button" parent="VBoxContainer/Load/LoadDialog/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
offset_right = 70.0
offset_bottom = 20.0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 8
text = "Confirm
"

[node name="Cancel" type="Button" parent="VBoxContainer/Load/LoadDialog/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
offset_left = 74.0
offset_right = 144.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Cancel"

[connection signal="mouse_entered" from="Panel/GridContainer" to="Panel/GridContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/GridContainer" to="Panel/GridContainer" method="_on_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/Save" to="VBoxContainer/Save" method="_on_button_down"]
[connection signal="text_changed" from="VBoxContainer/Save/SaveDialog/LineEdit" to="VBoxContainer/Save" method="_on_line_edit_text_changed"]
[connection signal="button_down" from="VBoxContainer/Save/SaveDialog/HBoxContainer/Confirm" to="VBoxContainer/Save" method="_on_ok_button_down"]
[connection signal="button_down" from="VBoxContainer/Save/SaveDialog/HBoxContainer/Cancel" to="VBoxContainer/Save" method="_on_cancel_button_down"]
[connection signal="button_down" from="VBoxContainer/Save/NotificationDialog/OK" to="VBoxContainer/Save/NotificationDialog" method="_on_ok_button_down"]
[connection signal="button_down" from="VBoxContainer/Load" to="VBoxContainer/Load" method="_on_button_down"]
[connection signal="button_down" from="VBoxContainer/Load/LoadDialog/VBoxContainer/HBoxContainer/Confirm" to="VBoxContainer/Load" method="_on_confirm_button_down"]
[connection signal="button_down" from="VBoxContainer/Load/LoadDialog/VBoxContainer/HBoxContainer/Cancel" to="VBoxContainer/Load" method="_on_cancel_button_down"]
